Solucion de error clase 13/10

--- a/LearningCenter.API/appsettings.json
+++ b/LearningCenter.API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+
+    "learningCenterConnection": "server:localhost;user=root;password=123456;database=learningcenterdb; "
+
+  },
   "AllowedHosts": "*"
 }
